--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,6 +19,9 @@ body {
   justify-content: center;
   padding: 10 10;
 }
+.invisible {
+  visibility: hidden;
+}
 
 .search-input {
   width: 240px;
@@ -48,21 +51,33 @@ body {
 
 .gallery {
   display: flex;
+  flex-wrap: wrap;
+  padding-left: 0 15px;
 }
-.gallery__link {
-  display: flex;
-  width: 100px;
-}
+
 .gallery-item {
   display: block;
+  width: 23%;
+  height: 300px;
+  margin: 10px auto;
+  border: 2px solid rgb(125, 110, 110);
+  border-radius: 5px 5px 15px 15px;
 }
 
 .gallery-item__img {
   display: block;
-  max-width: 300px;
-  height: auto;
+  width: 100%;
+  height: 210px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
 }
 .info-item {
-  font-size: 10px;
-  font-style: normal;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
