--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,9 +15,11 @@ body {
 }
 .search-form {
   display: flex;
+  position: fixed;
+  width: 100%;
+  height: 60px;
   background-color: rgb(123, 123, 142);
   justify-content: center;
-  padding: 10 10;
 }
 .invisible {
   visibility: hidden;
@@ -31,7 +33,7 @@ body {
   border: 2px solid rgb(13, 76, 234);
   border-radius: 5px;
   padding-left: 10px;
-  margin-right: 10px;
+  margin: auto 10;
 }
 
 .submit-btn,
@@ -42,7 +44,7 @@ body {
   border: 2px solid rgb(13, 76, 234);
   border-radius: 5px;
   padding-left: 10px;
-  padding: 0 10;
+  margin: auto 0;
 }
 .load_more {
   display: flex;
@@ -61,13 +63,14 @@ body {
   height: 300px;
   margin: 10px auto;
   border: 2px solid rgb(125, 110, 110);
-  border-radius: 5px 5px 15px 15px;
+  border-radius: 10px 10px 15px 15px;
 }
 
 .gallery-item__img {
   display: block;
   width: 100%;
   height: 210px;
+  border-radius: 8px 8px 0 0;
 }
 
 .info {
