--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: rgb(123, 123, 142);
   color: #212121;
   line-height: 1.5;
   background-size: cover;
@@ -18,7 +18,6 @@ body {
 
   width: 100%;
   height: 60px;
-  background-color: rgb(123, 123, 142);
   justify-content: center;
 }
 .invisible {
@@ -30,7 +29,7 @@ body {
   height: 30px;
   font-size: 14px;
   outline: none;
-  border: 2px solid rgb(13, 76, 234);
+  border: 2px solid rgb(104, 98, 98);
   border-radius: 5px;
   padding-left: 10px;
   margin: auto 10;
@@ -41,7 +40,7 @@ body {
   height: 30px;
   font-size: 14px;
   outline: none;
-  border: 2px solid rgb(13, 76, 234);
+  border: 2px solid rgb(104, 98, 98);
   border-radius: 5px;
   padding-left: 10px;
   margin: auto 0;
@@ -62,8 +61,9 @@ body {
   width: 23%;
   height: 300px;
   margin: 10px auto;
-  border: 2px solid rgb(125, 110, 110);
+  border: 2px solid rgb(104, 98, 98);
   border-radius: 10px 10px 15px 15px;
+  background-color: rgba(196, 196, 220, 0.957);
 }
 
 .gallery-item__img {
